fix horizontal scroll on all pages

--- a/site/sass/index.scss
+++ b/site/sass/index.scss
@@ -48,7 +48,7 @@ a {
 }
 
 hr {
-  width: 100%;
+  width: calc(100% - 2px);
 }
 
 footer#footer {
